--- a/sample/ProfiledApplication/ProfiledApplication.csproj
+++ b/sample/ProfiledApplication/ProfiledApplication.csproj
@@ -56,6 +56,10 @@
     <Reference Include="Serilog.Sinks.Literate">
       <HintPath>..\..\packages\Serilog.Sinks.Literate.1.0.4\lib\net45\Serilog.Sinks.Literate.dll</HintPath>
     </Reference>
+    <Reference Include="Serilog.Sinks.Seq, Version=1.5.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Serilog.Sinks.Seq.1.5.9\lib\net45\Serilog.Sinks.Seq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
